[package]
name = "hello-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ferris-says = "0.2"

[dev-dependencies]
cucumber = "0.19"
tokio = { version = "1.10", features = ["macros", "rt-multi-thread", "time"] }

[[test]]
name = "feature-test" # this should be the same as the filename of your test target
harness = false  # allows Cucumber to print output instead of libtest
